--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -1,21 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ProxyUnsetter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
-    <userSettings>
-        <ProxyUnsetter.Properties.Settings>
-            <setting name="NotifyOfProxySet" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UnsetProxyAutomatically" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </ProxyUnsetter.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ProxyUnsetter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <userSettings>
+    <ProxyUnsetter.Properties.Settings>
+      <setting name="NotifyOfProxySet" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UnsetProxyAutomatically" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CheckForNewReleaseWeekly" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </ProxyUnsetter.Properties.Settings>
+  </userSettings>
+  <system.net>
+    <settings>
+      <httpWebRequest useUnsafeHeaderParsing="true" />
+    </settings>
+  </system.net>
 </configuration>
