--- a/ProxyUnsetter/ProxyUnsetter.csproj
+++ b/ProxyUnsetter/ProxyUnsetter.csproj
@@ -85,6 +85,8 @@
     <Compile Include="AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="GitHubRelease.cs" />
+    <Compile Include="JSONParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyHelper.cs" />
