IP whitelists and a lot of other fixes

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -19,6 +19,14 @@
       <setting name="CheckForNewReleaseWeekly" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="IpWhitelist" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>172.16.101.14/255.255.254.0</string>
+          </ArrayOfString>
+        </value>
+      </setting>
     </ProxyUnsetter.Properties.Settings>
   </userSettings>
   <system.net>
