--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -22,9 +22,7 @@
       <setting name="IpWhitelist" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>172.16.101.14/255.255.254.0</string>
-          </ArrayOfString>
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
         </value>
       </setting>
     </ProxyUnsetter.Properties.Settings>
