Refactored proxy state. Added manual proxy setting. Exception handling.

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -25,6 +25,9 @@
             xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
         </value>
       </setting>
+      <setting name="ManuallySetProxy" serializeAs="String">
+        <value>127.0.0.1:8080</value>
+      </setting>
     </ProxyUnsetter.Properties.Settings>
   </userSettings>
   <system.net>
