--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -17,7 +17,7 @@
         <value>True</value>
       </setting>
       <setting name="CheckForNewReleaseWeekly" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="IpWhitelist" serializeAs="Xml">
         <value>
