Fixed release check timing and crash bug when no network available while doing release check.

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -28,6 +28,9 @@
       <setting name="ManuallySetProxy" serializeAs="String">
         <value>127.0.0.1:8080</value>
       </setting>
+      <setting name="LastReleaseCheck" serializeAs="String">
+        <value />
+      </setting>
     </ProxyUnsetter.Properties.Settings>
   </userSettings>
   <system.net>
