DateTime settings needs a default value, fixes crash on startup.

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -29,7 +29,7 @@
         <value>127.0.0.1:8080</value>
       </setting>
       <setting name="LastReleaseCheck" serializeAs="String">
-        <value />
+        <value>1753-01-01</value>
       </setting>
     </ProxyUnsetter.Properties.Settings>
   </userSettings>
