--- a/ProxyUnsetter/Properties/Settings.settings
+++ b/ProxyUnsetter/Properties/Settings.settings
@@ -19,7 +19,7 @@
       <Value Profile="(Default)">127.0.0.1:8080</Value>
     </Setting>
     <Setting Name="LastReleaseCheck" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">1753-01-01</Value>
     </Setting>
   </Settings>
 </SettingsFile>
