Also unset PAC script, added settings. Small fixes. Updated nuget packages. Updated to v1.70

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -31,6 +31,9 @@
       <setting name="LastReleaseCheck" serializeAs="String">
         <value>1753-01-01</value>
       </setting>
+      <setting name="UnsetPac" serializeAs="String">
+        <value>True</value>
+      </setting>
     </ProxyUnsetter.Properties.Settings>
   </userSettings>
   <system.net>
