--- a/ProxyUnsetter/packages.config
+++ b/ProxyUnsetter/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IPAddressRange" version="2.1.1" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.18" targetFramework="net461" />
+  <package id="IPAddressRange" version="3.2.0" targetFramework="net461" />
 </packages>
