Added PAC faker. Needs elevated permissions.

--- a/ProxyUnsetter/App.config
+++ b/ProxyUnsetter/App.config
@@ -31,7 +31,7 @@
       <setting name="LastReleaseCheck" serializeAs="String">
         <value>1753-01-01</value>
       </setting>
-      <setting name="UnsetPac" serializeAs="String">
+      <setting name="UnsetOrFakePac" serializeAs="String">
         <value>True</value>
       </setting>
     </ProxyUnsetter.Properties.Settings>
