--- a/ProxyUnsetter/Properties/Settings.settings
+++ b/ProxyUnsetter/Properties/Settings.settings
@@ -21,7 +21,7 @@
     <Setting Name="LastReleaseCheck" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)">1753-01-01</Value>
     </Setting>
-    <Setting Name="UnsetPac" Type="System.Boolean" Scope="User">
+    <Setting Name="UnsetOrFakePac" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
